更新主页标题和描述

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
+title: TeamFat技术团队
+description: 学习、思考、练习 是我们进步的主要方式，致力于成为优秀的全栈开发团队！
+show_downloads: false
+google_analytics:
 theme: jekyll-theme-cayman
